Updating about.html

--- a/about.html
+++ b/about.html
@@ -4,4 +4,4 @@ title: About
 header-img: "img/about-bg.png"
 ---
 
-<p></p>
+<p>Aspiring data scientist learning how to code one step at a time.</p>
